[BUGFIX] landing page behind body
Fixed the issue of landing page rendering behind body, causing mouseover events to not trigger

--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@
     --secondary: #069DBF;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+}
+
 .homepage {
     width: 100%;
     height: 100vh;
@@ -18,7 +22,7 @@
     padding: 60px;
     position: sticky;
     top: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 nav {
@@ -159,6 +163,8 @@ main {
     background-color: var(--ivory);
     height: 100vh;
     border-radius: 16px 16px 0 0;
+    position: relative;
+    z-index: 10;
 }
 
 @keyframes spin {
